test [x] [T_0007] - New User: Withdraw Wallet Success
